--- a/index.html
+++ b/index.html
@@ -149,68 +149,20 @@
         <!-- Testimonials -->
 <!-- Who's behind this -->
         
+
+
         <div class="whos-behind-container black-text">
             <div class="container">
                 <div class="row">
                     <div class="span12 whos-behind sponsors">
-                        <h3>Sponsors</h3>
+                        <h3>Event Summary</h3>
                         <p>
-                            <!-- A huge thanks to the organizations making this weekend possible. -->
-                            Sponsors -- the organizations making this event possible.  We're still searching for local design firms and individuals to help finance Rethink Education, so if you have the means to support this endeavor to inspire change in the K-12 system, please consider donating to the cause!  We'd <a class="menu-summary" href="">be glad to talk</a> about what we can offer in return.
+                            Rethink Education is a weekend workshop crafted to give local undergraduates an opportunity to think critically about revamping the K-12 education space through user-oriented design.  Under the mentorship of top New England designers, educators, and innovators, you will collaborate with equally passionate students to bring your ideas for change closer to reality.  Register by Saturday, August 23 to attend this exciting event hosted at Olin College!  
+
                         </p>
                     </div>
                 </div>
                 <div class="row">
-<!--                     <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/1.jpg" alt="">
-                            <div class="whos-behind-social">
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                                <a href=""><i class="fa fa-envelope"></i></a>
-                            </div>
-                        </div>
-                        <h4>John Doe</h4>
-                        <h5 class='black-text'>Developer</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-                            labore et.
-                        </p>
-                    </div>
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/foundry.jpeg" alt="">
-                            <div class="whos-behind-social">
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                                <a href=""><i class="fa fa-envelope"></i></a>
-                            </div>
-                        </div>
-                        <h4>Olin Foundry</h4>
-                        <h5 class='black-text'>Student Entrepreneurship Organization</h5>
-                        <p>
-                            Working to foster and promote entrepreneurship at Olin College of Engineering through education, experience, and employment opportunities.
-                        </p>
-                    </div>
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/3.jpg" alt="">
-                            <div class="whos-behind-social">
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                                <a href=""><i class="fa fa-envelope"></i></a>
-                            </div>
-                        </div>
-                        <h4>Sarah Red</h4>
-                        <h5 class='black-text'>Designer</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-                            labore et.
-                        </p>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -220,17 +172,7 @@
         <div class="whos-behind-container image-background">
 	        <div class="container">
 	            <div class="row">
-	                <div class="span12 whos-behind mentors">
-	                    <h3>Mentors</h3>
-	                    <p>
-	                    	We'd like to bring some of New England's best designers to help teams along their way.
-                            If you are a professional designer with a passion for education, <a class="menu-summary" href="">let's get in touch</a>!
-                            Whether you can commit two days or two hours of your time, you can help make this event a reality by sharing some of your knowledge and experience. <br>
-	                    </p>
-	                </div>
-	            </div>
-	            <div class="row">
-	                <!-- <div class="span4 whos-behind-box-1">
+	                <div class="span4 whos-behind-box-1">
 	                	<div class="whos-behind-photo">
 	                		<img src="assets/img/team/1.jpg" alt="">
 	                		<div class="whos-behind-social">
@@ -240,11 +182,10 @@
 	                			<a href=""><i class="fa fa-envelope"></i></a>
 	                		</div>
 	                	</div>
-	                    <h4>John Doe</h4>
-	                    <h5>Developer</h5>
+	                    <h4>Henry Houh</h4>
+	                    <h5>Founder, Einstein's Workshop</h5>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
+	                    	Father to 3 kids and a multitude of startups, Henry cares deeply engaging kids in STEM from a young age. He not only raised local FRC (robotics) teams from the ground up, but continues to work with kids regularly through volunteering at local schools and museums and through his kid-focused “makerspace” and education center Einstein’s Workshop.
 	                    </p>
 	                </div>
 	                <div class="span4 whos-behind-box-1">
@@ -257,11 +198,10 @@
 	                			<a href=""><i class="fa fa-envelope"></i></a>
 	                		</div>
 	                	</div>
-	                    <h4>Tim Brown</h4>
-	                    <h5>Founder</h5>
+	                    <h4>Saeed Arida</h4>
+	                    <h5>Founder, NuVu Studio</h5>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
+	                    	Saeed is Founder and Chief Excitement Officer at NuVu Studio, a "magnet innovation center for young minds".  At Nuvu, students learn in a hands-on environment with coaches who help students develop projects and iterate on ideas. Prior to NuVu, Saeed worked as an architect and designer on projects for MIT, LG, Samsung, and Microsoft.
 	                    </p>
 	                </div>
 	                <div class="span4 whos-behind-box-1">
@@ -274,13 +214,83 @@
 	                			<a href=""><i class="fa fa-envelope"></i></a>
 	                		</div>
 	                	</div>
-	                    <h4>Sarah Red</h4>
-	                    <h5>Designer</h5>
+	                    <h4>Bob Vieth</h4>
+	                    <h5>K-12 Project Coordinator, Edgerton Center</h5>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
+	                    	Before starting at the MIT Edgerton Center, Bob worked as a Science Education Specialist for two nonprofit firms and ran his own education consulting business. He also ran the statewide program for Engineering is Elementary, created/conducted over a dozen STEM summer science camps, and brought numerous science and engineering activities to Juneau area schools. 
+ 
 	                    </p>
-	                </div> -->
+	                </div>
+                </div>
+                <div class="row">
+                    <div class="span4 whos-behind-box-1">
+                        <div class="whos-behind-photo">
+                            <img src="assets/img/team/4.jpg" alt="">
+                            <div class="whos-behind-social">
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-envelope"></i></a>
+                            </div>
+                        </div>
+                        <h4>Jonathan Schmid</h4>
+                        <h5>Director of Innovation & Technology, Meadowbrook School of Weston</h5>
+                        <p>
+                            Currently Director of Innovation and Technology at the Meadowbrook School of Weston, Jonathan has a background in  design and a Master's degree in Instructional Technology. Among other things, Jonathan is also an Apple Certified Technical Coordinator and Support Professional.  
+                        </p>
+                    </div>
+                    <div class="span4 whos-behind-box-1">
+                        <div class="whos-behind-photo">
+                            <img src="assets/img/team/5.jpg" alt="">
+                            <div class="whos-behind-social">
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-envelope"></i></a>
+                            </div>
+                        </div>
+                        <h4>Marco Morales</h4>
+                        <h5>Designer at EdX</h5>
+                        <p>
+                            Marco is currently at EdX, working to help educate a billion people online.  He is also serving as Product Lead at BrightLoop, where he is working to build an application that helps K-6th graders collect qualitative student notes and provided an individualized student education.  In the past, Marco worked as a Product Designer at Alleyoop.
+                        </p>
+                    </div>
+                    <div class="span4 whos-behind-box-1">
+                        <div class="whos-behind-photo">
+                            <img src="assets/img/team/6.jpg" alt="">
+                            <div class="whos-behind-social">
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-envelope"></i></a>
+                            </div>
+                        </div>
+                        <h4>Lee Accomando</h4>
+                        <h5>Lead Developer at Testive</h5>
+                        <p>
+                            Lee is hard at work at the education startup Testive, developing ways to motivate kids on the web.  Before starting work at Testive, Lee earned a degree in Environmental Science from UMass Amherst.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="span4 whos-behind-box-1">
+                    </div>
+                    <div class="span4 whos-behind-box-1">
+                        <div class="whos-behind-photo">
+                            <img src="assets/img/team/7.jpg" alt="">
+                            <div class="whos-behind-social">
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-envelope"></i></a>
+                            </div>
+                        </div>
+                        <h4>David Chippendale</h4>
+                        <h5>Lead Designer at Testive</h5>
+                        <p>
+                            David spends his time designing and building education products that blend teachers and technology. At Testive, design is a highly iterative process fueled by student feedback and data-driven decisions.  Before Testive, David worked as a Developer at EverTrue and a HackStart at TechStars.
+                        </p>
+                    </div>
 	            </div>
 	        </div>
         </div>
@@ -311,7 +321,7 @@
                         </div>
                         <h4>Conceptualize</h4>
                         <p>
-                           Using what you learned from your interactions with students and teachers, build on the areas of opportunities to generate a wide range of possible solutions. Then narrow down the pool to a few promising concepts. 
+                           Using what you learned from your interactions with students and teachers, build on the areas of opportunities to generate a wide range of possible solutions. Then narrow down the pool to a few promising choices. 
                         </p>
                     </div>
                     <div class="span4 about-box-1">
