Fix mentor scrollto

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="whos-behind-container image-background">
 	        <div class="container">
 	            <div class="row">
-	                <div class="span4 whos-behind-box-1">
+	                <div class="span4 whos-behind-box-1 mentors">
 	                	<div class="whos-behind-photo">
 	                		<img src="assets/img/team/1.jpg" alt="">
 	                		<div class="whos-behind-social">
@@ -182,7 +182,7 @@
 	                			<a href=""><i class="fa fa-envelope"></i></a>
 	                		</div>
 	                	</div>
-	                    <h4>Henry Houh</h4>
+	                    <h4 >Henry Houh</h4>
 	                    <h5>Founder, Einstein's Workshop</h5>
 	                    <p>
 	                    	Father to 3 kids and a multitude of startups, Henry cares deeply engaging kids in STEM from a young age. He not only raised local FRC (robotics) teams from the ground up, but continues to work with kids regularly through volunteering at local schools and museums and through his kid-focused “makerspace” and education center Einstein’s Workshop.
