:elephant: Remove irrelephant information

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
 			<a class="menu-top" href="">Top</a>
 			<a class="menu-subscribe" href="">Register</a>
 			<a class="menu-project" href="">About</a>
-			<a class="menu-sponsors" href="">Sponsors</a>
-			<a class="menu-mentors" href="">Mentors</a>
-            <a class="menu-phases" href="">Phases</a>
-			<a class="menu-summary" href="">Summary</a>
+			<a class="menu-sponsors" href="">FAQ</a>
+			<a class="menu-summary" href="">Contact</a>
 		</nav>
 
         <!-- Coming Soon -->
@@ -65,10 +63,10 @@
                         		<h1><a href="">Rethink Education</a></h1>
                         	</div>
                             <p>
-                                  On March 28th and 29th, we're bringing together designers, mentors, and students of all ages for 2 days to re-envision the K-12 educational system.
+                                  On March 28th, 2015, we're bringing together designers, mentors, and students of all ages to re-envision the K-12 educational system.
                             </p>
                             <div class="timer">
-                                <div class="days-wrapper">
+                                <!-- <div class="days-wrapper">
                                     <span class="days"></span> <br>days
                                 </div>
                                 <div class="hours-wrapper">
@@ -79,7 +77,7 @@
                                 </div>
                                 <div class="seconds-wrapper">
                                     <span class="seconds"></span> <br>seconds
-                                </div>
+                                </div> -->
                             </div>
                             <p class="top-arrow">
                             	<i class="fa fa-chevron-down"></i>
@@ -137,9 +135,9 @@
 	                	<div class="about-box-1-icon">
 	                		<i class="fa fa-clock-o"></i>
 	                	</div>
-	                    <h4>Two Days</h4>
+	                    <h4>One Day</h4>
 	                    <p>
-	                    	Twenty hours of ideation, imagination, and socialization with educators, students, designers, and engineers.
+	                    	Eight hours of ideation, imagination, and socialization with educators, students, designers, and engineers.
 	                    </p>
 	                </div>
 	            </div>
@@ -154,10 +152,10 @@
         <div class="whos-behind-container black-text">
             <div class="container">
                 <div class="row">
-                    <div class="span12 whos-behind sponsors">
+                    <div class="span12 whos-behind">
                         <h3>Event Summary</h3>
                         <p>
-                            Rethink Education is a weekend workshop crafted to give local undergraduates an opportunity to think critically about revamping the K-12 education space through user-oriented design.  Under the mentorship of top New England designers, educators, and innovators, you will collaborate with equally passionate students to bring your ideas for change closer to reality.  Register by Saturday, August 23 to attend this exciting event hosted at Olin College!
+                            Rethink Education is a weekend workshop crafted to give local undergraduates an opportunity to think critically about revamping the K-12 education space through user-oriented design.  Under the mentorship of top New England designers, educators, and innovators, you will collaborate with equally passionate students to bring your ideas for change closer to reality.  Register now to attend this exciting event hosted at Olin College!
 
                         </p>
                     </div>
@@ -167,185 +165,57 @@
             </div>
         </div>
 
-        <!-- Who's behind this -->
-
-        <div class="whos-behind-container image-background">
-	        <div class="container">
-	            <div class="row">
-	                <div class="span4 whos-behind-box-1 mentors">
-	                	<div class="whos-behind-photo">
-	                		<img src="assets/img/team/1.jpg" alt="">
-	                	</div>
-	                    <h4 >Henry Houh</h4>
-	                    <h5>Founder, Einstein's Workshop</h5>
-	                    <p>
-	                    	Father to 3 kids and a multitude of startups, Henry cares deeply engaging kids in STEM from a young age. He not only raised local FRC (robotics) teams from the ground up, but continues to work with kids regularly through volunteering at local schools and museums and through his kid-focused “makerspace” and education center Einstein’s Workshop.
-	                    </p>
-	                </div>
-	                <div class="span4 whos-behind-box-1">
-	                	<div class="whos-behind-photo">
-	                		<img src="assets/img/team/2.jpg" alt="">
-	                	</div>
-	                    <h4>Saeed Arida</h4>
-	                    <h5>Founder, NuVu Studio</h5>
-	                    <p>
-	                    	Saeed is Founder and Chief Excitement Officer at NuVu Studio, a "magnet innovation center for young minds".  At Nuvu, students learn in a hands-on environment with coaches who help students develop projects and iterate on ideas. Prior to NuVu, Saeed worked as an architect and designer on projects for MIT, LG, Samsung, and Microsoft.
-	                    </p>
-	                </div>
-	                <div class="span4 whos-behind-box-1">
-	                	<div class="whos-behind-photo">
-	                		<img src="assets/img/team/3.jpg" alt="">
-	                	</div>
-	                    <h4>Bob Vieth</h4>
-	                    <h5>K-12 Project Coordinator, Edgerton Center</h5>
-	                    <p>
-	                    	Before starting at the MIT Edgerton Center, Bob worked as a Science Education Specialist for two nonprofit firms and ran his own education consulting business. He also ran the statewide program for Engineering is Elementary, created/conducted over a dozen STEM summer science camps, and brought numerous science and engineering activities to Juneau area schools.
-
-	                    </p>
-	                </div>
-                </div>
-                <div class="row">
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/4.jpg" alt="">
-                        </div>
-                        <h4>Jonathan Schmid</h4>
-                        <h5>Director of Innovation & Technology, Meadowbrook School of Weston</h5>
-                        <p>
-                            Currently Director of Innovation and Technology at the Meadowbrook School of Weston, Jonathan has a background in  design and a Master's degree in Instructional Technology. Among other things, Jonathan is also an Apple Certified Technical Coordinator and Support Professional.
-                        </p>
-                    </div>
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/5.jpg" alt="">
-                        </div>
-                        <h4>Marco Morales</h4>
-                        <h5>Designer at EdX</h5>
-                        <p>
-                            Marco is currently at EdX, working to help educate a billion people online.  He is also serving as Product Lead at BrightLoop, where he is working to build an application that helps K-6th graders collect qualitative student notes and provided an individualized student education.  In the past, Marco worked as a Product Designer at Alleyoop.
-                        </p>
-                    </div>
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/6.jpg" alt="">
-                        </div>
-                        <h4>Lee Accomando</h4>
-                        <h5>Lead Developer at Testive</h5>
-                        <p>
-                            Lee is hard at work at the education startup Testive, developing ways to motivate kids on the web.  Before starting work at Testive, Lee earned a degree in Environmental Science from UMass Amherst.
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="span4 whos-behind-box-1">
-                    </div>
-                    <div class="span4 whos-behind-box-1">
-                        <div class="whos-behind-photo">
-                            <img src="assets/img/team/7.jpg" alt="">
-                        </div>
-                        <h4>David Chippendale</h4>
-                        <h5>Lead Designer at Testive</h5>
-                        <p>
-                            David spends his time designing and building education products that blend teachers and technology. At Testive, design is a highly iterative process fueled by student feedback and data-driven decisions.  Before Testive, David worked as a Developer at EverTrue and a HackStart at TechStars.
-                        </p>
-                    </div>
-	            </div>
-	        </div>
-        </div>
-
-        <div class="whos-behind-container black-text phases">
+        <!-- About the new site -->
+        <div class="about-container">
             <div class="container">
                 <div class="row">
-                    <div class="span12 whos-behind sponsors">
-                        <h3>Design Phases</h3>
+                    <div class="span12 sponsors about">
+                        <h3>FAQ</h3>
                         <p>
-                            From casual conversations to final presentations.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="span4 about-box-1">
-                        <div class="about-box-1-icon">
-                            <i class="fa fa-heart"></i>
-                        </div>
-                        <h4>Empathize</h4>
-                       <p>
-                           Gain a deeper understanding of the people of the people you're designing for. Learn what needs and values they hold, and identify areas of opportunity for improving their lives.
+                        <h4>What's the cost?</h4>
+                        <p>
+                           The event is free for undergraduate students, and $10 for everyone else.  Trust us, it'll be worth it.
                         </p>
                     </div>
                     <div class="span4 about-box-1">
-                        <div class="about-box-1-icon">
-                            <i class="fa fa-pencil-square-o"></i>
-                        </div>
-                        <h4>Conceptualize</h4>
+                        <h4>Why design for education?</h4>
                         <p>
-                           Using what you learned from your interactions with students and teachers, build on the areas of opportunities to generate a wide range of possible solutions. Then narrow down the pool to a few promising choices.
+                           Olin College was founded 10 years ago with the goal of revolutionizing engineering education, and we'd like to spread that spirit of educational experimentation.
                         </p>
                     </div>
                     <div class="span4 about-box-1">
-                        <div class="about-box-1-icon">
-                            <i class="fa fa-tasks"></i>
-                        </div>
-                        <h4>Develop</h4>
+                        <h4>How can I get to Olin?</h4>
                         <p>
-                            Select a final idea to pursue and flush out the details of your concept, then prepare to communicate your idea to the world.
+                           If you can't drive to 1000 Olin Way, Needham, MA, we will be running a shuttle to and from the Eliot T Station (Green D Line).
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="span4 about-box-1">
+                        <h4>Do I need a team?</h4>
+                        <p>
+                           Nope!  We'll be sending out a preregistration survey to help you set up teams if you don't have one.
+                        </p>
+                    </div>
+                    <div class="span4 about-box-1">
+                        <h4>Who can participate?</h4>
+                        <p>
+                           The event is for current undergraduate students, but we're also looking for professional designers, K-12 students, and teachers to help make the event possible.
+                        </p>
+                    </div>
+                    <div class="span4 about-box-1">
+                        <h4>How large will the event be?</h4>
+                        <p>
+                           We're lmiting this event to the first 100 undergraduate students, so sign up quick!
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-
-                <!-- About the new site -->
-                <div class="about-container">
-                    <div class="container">
-                        <div class="row">
-                            <div class="span12 about">
-                                <h3>FAQ</h3>
-                                <p>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="span4 about-box-1">
-                                <h4>What's the cost?</h4>
-                                <p>
-                                   The event costs $20 to help offset the cost of food and design materials.  Trust us, it'll be worth it.
-                                </p>
-                            </div>
-                            <div class="span4 about-box-1">
-                                <h4>Why design for education?</h4>
-                                <p>
-                                   Olin College was founded 10 years ago with the goal of revolutionizing engineering education, and we'd like to spread that spirit of educational experimentation.
-                                </p>
-                            </div>
-                            <div class="span4 about-box-1">
-                                <h4>How can I get to Olin?</h4>
-                                <p>
-                                   If you can't drive to 1000 Olin Way, Needham, MA, we will be running a shuttle to and from the Eliot T Station (Green D Line).
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="span4 about-box-1">
-                                <h4>Do I need a team?</h4>
-                                <p>
-                                   Nope!  We'll be sending out a preregistration survey to set up teams of people with diverse backgrounds and abilities.
-                                </p>
-                            </div>
-                            <div class="span4 about-box-1">
-                                <h4>Who can participate?</h4>
-                                <p>
-                                   The event is for current undergraduate students, but we're also currently looking for professional designers, K-12 students, and teachers to help make the event possible.
-                                </p>
-                            </div>
-                            <div class="span4 about-box-1">
-                                <h4>How large will the event be?</h4>
-                                <p>
-                                   We're planning for around 100 undergraduate students.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
 
 
@@ -354,36 +224,15 @@
             <div class="container">
                 <div class="row">
                     <div class="span12 contact">
-                        <h3>Event Summary and Contact Info</h3>
+                        <h3>Contact Info</h3>
                         <p>
-
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="span7 contact-form">
-                        <h4>Event Schedule</h4>
-                        <h3>Saturday</h3>
-                        <li>8:30 - 9:30: Breakfast and check in</li>
-                        <li>9:30 - 10:00: Welcome and orientation</li>
-                        <li>10:00 - 10:30: Empathize phase kickoff</li>
-                        <li>10:30 - 3:30: Empathize phase work time</li>
-                        <li>11:30 - 2:00: Lunch</li>
-                        <li>12:00 - 5:00: K-12 Students and Teachers on campus</li>
-                        <li>3:30 - 4:00: Conceptualize phase kickoff</li>
-                        <li>5:00 - 7:00: Dinner</li>
-                        <li>4:00 - 9:00: Conceptualize work time</li>
-                        <h3>Sunday</h3>
-                        <li>9:00 - 10:00: Breakfast and check in</li>
-                        <li>10:00 - 10:30: Develop phase kickoff</li>
-                        <li>10:30 - 2:00: Develop phase work time</li>
-                        <li>11:30 - 2:00: Lunch</li>
-                        <li>2:30 - 4:00: Presentations</li>
-                        <li>4:00 - 5:00: Reflection and Feedback</li>
-                        <li>5:00 - 5:30: Awards</li>
-                        <li>5:30 - 6:30: Mixer</li>
+                    <div class="span4">
                     </div>
-                    <div class="span5 contact-address">
+                    <div class="span4 contact-address">
                         <h4>Event Location</h4>
                         <div class="map"></div>
                         <h4>Address</h4>
