fix 'limiting' typo in FAQ

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="span4 about-box-1">
                         <h4>How large will the event be?</h4>
                         <p>
-                           We're lmiting this event to the first 100 undergraduate students, so sign up quick!
+                           We're limiting this event to the first 100 undergraduate students, so sign up quick!
                         </p>
                     </div>
                 </div>
